src/components/NewsSect/NewsSect.css
.background-color {
    background-color: rgba(60, 122, 151, 0.144);
    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.315) inset;
}
  
.story {
    margin: 20px;
    height: 350px;
    box-shadow: 2px 2px 8px grey;
    border: 1px solid black;
    border-radius: 10px;
    background-color: rgb(241, 241, 241);
  
}

.news-header {
    text-decoration: underline;
}

.news-head {
    padding-top: 10px;
    height: 40%;
    margin: 0;
    border-bottom: 2px solid black;
}

.news-head > a:hover {
    color: #ffc05f !important;
}

.d {
    padding-top: 10px;
}

.news-head > a {
    color: black;
    text-decoration: none;
}

.news-head > a:hover {
    cursor: pointer;
    color: darkgray;
}

.news-head:visited {
    color: darkmagenta;
}

